<resources>
    <string name="app_name">AkakomMobile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile_visi_misi"><![CDATA[Profile & Visi Misi]]></string>
    <string name="beranda">Beranda</string>
    <string name="prodi_jurusan">Prodi/Jurusan</string>
    <string name="info_kampus">Info Kampus</string>
    <string name="tautan">Tautan</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
</resources>
