<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_beranda"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/beranda" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_black_24dp"
            android:title="@string/profile_visi_misi" />
        <item
            android:id="@+id/nav_prodi"
            android:icon="@drawable/ic_prodi_black_24dp"
            android:title="@string/prodi_jurusan" />
        <item
            android:id="@+id/nav_info_kampus"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/info_kampus" />
        <item
            android:id="@+id/nav_tautan"
            android:icon="@drawable/ic_tautan_black_24dp"
            android:title="@string/tautan" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_rss_feed_black_24dp"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>

</menu>
